# gitlab-auto-pr

./: .env.example  .gitignore  README.md  pyproject.toml
src/: download_model.sh  gitlab_auto_pr.py  issue_handler.py  llm_handler.py
